Fix date 'x' covering up text & date being cut off

--- a/src/stylesheets/components/_input.scss
+++ b/src/stylesheets/components/_input.scss
@@ -11,10 +11,11 @@
 
     &__text {
         width: auto;
-        flex-grow: 2;
+        flex-grow: 1;
     }
 
     &__date {
+        min-width: 15rem;
         width: auto;
     }
 
